# test

oqs/: CMakeLists.txt
oqs/cmake/modules/: FindMKL.cmake
oqs/oqs_lib/model/: CMakeLists.txt  step.cpp  step.h  types.h
oqs/oqs_main/: CMakeLists.txt  main.cpp
oqs/oqs_test/model/: CMakeLists.txt  oqs_test.cpp
